# cxpm-ai-prd-cli

./: README.md  cx_assistant_design_meeting_transcript.txt
cli/: .gitignore  pyproject.toml
cli/schemas/auth.login/: 1.0.json
cli/schemas/auth.logout/: 1.0.json
cli/schemas/auth.status/: 1.0.json
cli/schemas/diagnostics/: 1.0.json
cli/schemas/jira.generate/: 1.0.json
cli/schemas/jira.save/: 1.0.json
cli/schemas/meeting.apply/: 1.0.json
cli/schemas/meeting.ingest/: 1.0.json
cli/schemas/meeting.resolve/: 1.0.json
cli/schemas/meeting.review/: 1.0.json
cli/schemas/requirement.export/: 1.0.json
cli/schemas/requirement.ls/: 1.0.json
cli/schemas/version/: 1.0.json
cli/src/cxpm_cli/: errors.py  main.py  runtime.py
cli/src/cxpm_cli/client/: api.py  sse.py
cli/src/cxpm_cli/commands/: __init__.py  auth.py  config.py  helpers.py  jira.py  meeting.py  project.py  requirement.py
cli/src/cxpm_cli/models/: auth.py  common.py  jira.py  meeting.py  project.py  requirement.py
cli/src/cxpm_cli/state/: profiles.py  store.py
cli/src/cxpm_cli/ui/: interactive.py  json_output.py  render.py
cli/src/cxpm_cli/workflows/: meeting_flow.py  resolve_flow.py
cli/tests/: conftest.py
cli/tests/command/: test_cli_commands.py
cli/tests/e2e/: run_real_backend_e2e.py
cli/tests/integration/: test_api_integration.py
cli/tests/unit/: test_api_client.py  test_json_schema_contracts.py  test_resolve_flow.py
docs/plans/: 2026-03-02-cli-design.md
